# redrob-ai-career-os

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  README_HF.md  app.py  pyproject.toml  rank.py  requirements.txt  submission_metadata.yaml
Prompts/: Phase 1 _ Initial.txt
app/: __init__.py  demo.py  requirements.txt
configs/: best_hparams.json  default.yaml
docs/: BLUEPRINT.md  DEMO_VIDEO_SCRIPT.md  HUGGINGFACE_DEPLOY.md  ablation.md  architecture.py  daily_log.md  dataset_notes.md  error_analysis.md  fairness_report.md  methodology_notes.md  performance.md  phase1_status.md  phase5_status.md  results_log.md
notebooks/: 01_eda_jobs.py  02_eda_candidates.py  03_understand_labels.py  04_create_splits_and_baseline.py  05_bm25_baseline.py  06_dense_baseline.py  07_hybrid_retrieval.py  08_jd_parsing.py  09_candidate_parsing.py  10_skill_ontology.py  11_semantic_features.py  12_skill_features.py  13_experience_features.py  14_behavioral_features.py  15_train_ltr.py  16_embedding_ensemble.py  17_cross_encoder.py  18_llm_reranker.py  19_explainability.py  20_phase3_pipeline.py  21_performance_profiling.py  23_ablation_study.py  24_error_analysis.py  25_graph_features.py  26_finetune_embeddings.py  27_fairness_audit.py  28_final_hparam_sweep.py  colab_build_dense_index.ipynb
scripts/: build_dense_gpu.py  build_indices.py  create_pseudo_labels.py  generate_features.py  generate_submission.py  parse_data.py  train_ltr.py
src/: __init__.py
tests/: test_challenge_bundle.py  test_consistency.py  test_edge_cases.py  test_metrics.py  (+8 more)
(+46 files in other folders)
