[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redrob-ai-career-os"
version = "0.1.0"
description = "Redrob AI Career OS candidate discovery and ranking platform."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { file = "LICENSE" }
authors = [
  { name = "India Runs Track 1", email = "rohitrajputfromup12@gmail.com" }
]
dependencies = [
  "faiss-cpu==1.11.0",
  "gradio==5.50.0",
  "joblib==1.5.1",
  "jupyter==1.1.1",
  "lightgbm==4.6.0",
  "loguru==0.7.3",
  "matplotlib==3.10.7",
  "nltk==3.9.2",
  "numpy==2.2.6",
  "optuna==4.4.0",
  "pandas==2.3.0",
  "plotly==6.1.2",
  "pyarrow==21.0.0",
  "pypdf==5.9.0",
  "pydantic==2.11.5",
  "python-docx==1.2.0",
  "python-dotenv==1.1.0",
  "pyyaml==6.0.2",
  "rapidfuzz==3.13.0",
  "rank-bm25==0.2.2",
  "scikit-learn==1.7.0",
  "scipy==1.15.3",
  "seaborn==0.13.2",
  "sentence-transformers==4.1.0",
  "torch==2.7.1",
  "tqdm==4.67.1",
  "transformers==4.52.4",
  "wandb==0.20.1",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.5",
  "ruff==0.11.12",
]
# LLM listwise re-ranking uses a LOCAL Ollama server over plain HTTP (stdlib
# urllib) — no hosted-LLM SDK is required, so there is no optional `llm` extra.

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
